// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа EditMode 1`] = `
<div
  className="edit-form"
>
  <h2>
    Edit client info
  </h2>
  <div
    className="edit-form__row"
  >
    <label
      htmlFor="edit-form__lastname"
    >
      Lastname
    </label>
    <input
      defaultValue="Иванов"
      id="edit-form__lastname"
      type="text"
    />
  </div>
  <div
    className="edit-form__row"
  >
    <label
      htmlFor="edit-form__name"
    >
      Name
    </label>
    <input
      defaultValue="Иван"
      id="edit-form__name"
      type="text"
    />
  </div>
  <div
    className="edit-form__row"
  >
    <label
      htmlFor="edit-form__secondname"
    >
      Secondname
    </label>
    <input
      defaultValue="Иванович"
      id="edit-form__secondname"
      type="text"
    />
  </div>
  <div
    className="edit-form__row"
  >
    <label
      htmlFor="edit-form__balance"
    >
      Balance
    </label>
    <input
      defaultValue={200}
      id="edit-form__balance"
      type="text"
    />
  </div>
  <input
    id="save-btn"
    onClick={[Function]}
    type="button"
    value="Save"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Del"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Cancel"
  />
</div>
`;

exports[`работа MobileCompany 1`] = `
<div
  className="mobile-company"
>
  <h1
    className="mobile-company__name"
  >
    Компания «
    Velcom
    »
  </h1>
  <hr />
  <input
    onClick={[Function]}
    type="button"
    value="All"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Active"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Deactive"
  />
  <hr />
  <div
    className="mobile-company__client"
  >
    <div
      className="mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Фамилия
      </div>
      <div
        className="mobile-client__name"
      >
        Имя
      </div>
      <div
        className="mobile-client__fathername"
      >
        Отчество
      </div>
      <div
        className="mobile-client__balance"
      >
        Баланс
      </div>
      <div
        className="mobile-client__status"
      >
        Статус
      </div>
      <div
        className="mobile-client__edit"
      >
        Редактировать
      </div>
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Иванов
      </div>
      <div
        className="mobile-client__name"
      >
        Иван
      </div>
      <div
        className="mobile-client__secondname"
      >
        Иванович
      </div>
      <div
        className="mobile-client__balance"
      >
        200
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Сидоров
      </div>
      <div
        className="mobile-client__name"
      >
        Сидор
      </div>
      <div
        className="mobile-client__secondname"
      >
        Сидорович
      </div>
      <div
        className="mobile-client__balance"
      >
        2700
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Петров
      </div>
      <div
        className="mobile-client__name"
      >
        Петр
      </div>
      <div
        className="mobile-client__secondname"
      >
        Петрович
      </div>
      <div
        className="mobile-client__balance"
      >
        -2200
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        blocked
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Прупас
      </div>
      <div
        className="mobile-client__name"
      >
        Матвей
      </div>
      <div
        className="mobile-client__secondname"
      >
        Викторович
      </div>
      <div
        className="mobile-client__balance"
      >
        100500
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Довгель
      </div>
      <div
        className="mobile-client__name"
      >
        Анастасия
      </div>
      <div
        className="mobile-client__secondname"
      >
        Генриховна
      </div>
      <div
        className="mobile-client__balance"
      >
        0
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        blocked
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Add client"
  />
</div>
`;

exports[`работа MobileCompany 2`] = `
<div
  className="mobile-company"
>
  <h1
    className="mobile-company__name"
  >
    Компания «
    Velcom
    »
  </h1>
  <hr />
  <input
    onClick={[Function]}
    type="button"
    value="All"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Active"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Deactive"
  />
  <hr />
  <div
    className="mobile-company__client"
  >
    <div
      className="mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Фамилия
      </div>
      <div
        className="mobile-client__name"
      >
        Имя
      </div>
      <div
        className="mobile-client__fathername"
      >
        Отчество
      </div>
      <div
        className="mobile-client__balance"
      >
        Баланс
      </div>
      <div
        className="mobile-client__status"
      >
        Статус
      </div>
      <div
        className="mobile-client__edit"
      >
        Редактировать
      </div>
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Иванов
      </div>
      <div
        className="mobile-client__name"
      >
        Иван
      </div>
      <div
        className="mobile-client__secondname"
      >
        Иванович
      </div>
      <div
        className="mobile-client__balance"
      >
        200
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Сидоров
      </div>
      <div
        className="mobile-client__name"
      >
        Сидор
      </div>
      <div
        className="mobile-client__secondname"
      >
        Сидорович
      </div>
      <div
        className="mobile-client__balance"
      >
        2700
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Прупас
      </div>
      <div
        className="mobile-client__name"
      >
        Матвей
      </div>
      <div
        className="mobile-client__secondname"
      >
        Викторович
      </div>
      <div
        className="mobile-client__balance"
      >
        100500
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Add client"
  />
</div>
`;

exports[`работа MobileCompany 3`] = `
<div
  className="mobile-company"
>
  <h1
    className="mobile-company__name"
  >
    Компания «
    Velcom
    »
  </h1>
  <hr />
  <input
    onClick={[Function]}
    type="button"
    value="All"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Active"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Deactive"
  />
  <hr />
  <div
    className="mobile-company__client"
  >
    <div
      className="mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Фамилия
      </div>
      <div
        className="mobile-client__name"
      >
        Имя
      </div>
      <div
        className="mobile-client__fathername"
      >
        Отчество
      </div>
      <div
        className="mobile-client__balance"
      >
        Баланс
      </div>
      <div
        className="mobile-client__status"
      >
        Статус
      </div>
      <div
        className="mobile-client__edit"
      >
        Редактировать
      </div>
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Петров
      </div>
      <div
        className="mobile-client__name"
      >
        Петр
      </div>
      <div
        className="mobile-client__secondname"
      >
        Петрович
      </div>
      <div
        className="mobile-client__balance"
      >
        -2200
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        blocked
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Довгель
      </div>
      <div
        className="mobile-client__name"
      >
        Анастасия
      </div>
      <div
        className="mobile-client__secondname"
      >
        Генриховна
      </div>
      <div
        className="mobile-client__balance"
      >
        0
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        blocked
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Add client"
  />
</div>
`;

exports[`работа MobileCompany 4`] = `
<div
  className="mobile-company"
>
  <h1
    className="mobile-company__name"
  >
    Компания «
    Velcom
    »
  </h1>
  <hr />
  <input
    onClick={[Function]}
    type="button"
    value="All"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Active"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Deactive"
  />
  <hr />
  <div
    className="mobile-company__client"
  >
    <div
      className="mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Фамилия
      </div>
      <div
        className="mobile-client__name"
      >
        Имя
      </div>
      <div
        className="mobile-client__fathername"
      >
        Отчество
      </div>
      <div
        className="mobile-client__balance"
      >
        Баланс
      </div>
      <div
        className="mobile-client__status"
      >
        Статус
      </div>
      <div
        className="mobile-client__edit"
      >
        Редактировать
      </div>
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Иванов
      </div>
      <div
        className="mobile-client__name"
      >
        Иван
      </div>
      <div
        className="mobile-client__secondname"
      >
        Иванович
      </div>
      <div
        className="mobile-client__balance"
      >
        200
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Сидоров
      </div>
      <div
        className="mobile-client__name"
      >
        Сидор
      </div>
      <div
        className="mobile-client__secondname"
      >
        Сидорович
      </div>
      <div
        className="mobile-client__balance"
      >
        2700
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Петров
      </div>
      <div
        className="mobile-client__name"
      >
        Петр
      </div>
      <div
        className="mobile-client__secondname"
      >
        Петрович
      </div>
      <div
        className="mobile-client__balance"
      >
        -2200
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        blocked
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Прупас
      </div>
      <div
        className="mobile-client__name"
      >
        Матвей
      </div>
      <div
        className="mobile-client__secondname"
      >
        Викторович
      </div>
      <div
        className="mobile-client__balance"
      >
        100500
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        active
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
    <div
      className="mobile-client mobile-client__row"
    >
      <div
        className="mobile-client__lastname"
      >
        Довгель
      </div>
      <div
        className="mobile-client__name"
      >
        Анастасия
      </div>
      <div
        className="mobile-client__secondname"
      >
        Генриховна
      </div>
      <div
        className="mobile-client__balance"
      >
        0
      </div>
      <div
        className="mobile-client__active"
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        blocked
      </div>
      <input
        onClick={[Function]}
        type="button"
        value="Edit"
      />
    </div>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Add client"
  />
</div>
`;
